# LearningMPI

./: .gitignore  CMakeLists.txt  README.md  example_add_two_stdvectors.cpp  example_brodcast.cpp
boostMPI/: CMakeLists.txt  bcast_hello_world.cpp  gather_hello_world.cpp  hello_world.cpp  scatter_hello_world.cpp  scatter_std_vector.cpp
examples/: CMakeLists.txt  example_add_two_arrays.cpp  example_add_vector_any_size.cpp  example_boost_serialization1.cpp  example_boost_serialization_scat.cpp  example_hamiltonian_mpi.cpp  example_hamiltonian_mpi_2.cpp  example_hamiltonian_sequential.cpp  example_hello_world.cpp  example_many_matrix_determinants.cpp  example_mpi_openMP_1.cpp  example_send_arrays.cpp  example_serialization1.cpp  example_serialization_struct.cpp  example_serialization_vector_struct.cpp  example_size_rank.cpp
python/: plot_distribution.py
src/: square_matrix.hpp  utils.hpp
